# oneCCL

./: CMakeLists.txt  third-party-programs.txt
cmake/: helpers.cmake
doc/rst/source/: conf.py
doc/rst/source/benchmark-guide/: benchmark.rst
include/oneapi/ccl/: comm_attr.hpp  comm_split_attr.hpp  comm_split_attr_ids_traits.hpp  config.h  config.h.in  device_type_traits.hpp  lp_types.hpp  type_traits.hpp  types.hpp  types_policy.hpp
man/: doxconfig
man/man3/: OneCCL.3
src/: CMakeLists.txt  ccl_api_functions.cpp  ccl_app_api_coll_attr.cpp  ccl_app_api_comm_attr.cpp  ccl_app_api_comm_split_attr.cpp  ccl_app_api_datatype_attr.cpp
src/atl/mpi/: atl_mpi.cpp
src/atl/ofi/: atl_ofi.cpp  atl_ofi_helper.cpp
src/coll/: coll.cpp
src/coll/algorithms/allgatherv/: allgatherv.cpp
src/coll/algorithms/allgatherv/sycl/: allgatherv_large_sycl.cpp  allgatherv_small_sycl.cpp  allgatherv_sycl.cpp
src/coll/algorithms/allreduce/sycl/: allreduce_large_sycl.cpp  allreduce_pcie.cpp  allreduce_ring_ll256.cpp  allreduce_small_sycl.cpp  allreduce_sycl.cpp
src/coll/algorithms/alltoall/sycl/: alltoall_large_sycl.cpp  alltoall_sycl.cpp
src/coll/algorithms/broadcast/sycl/: broadcast_small_sycl.cpp  broadcast_sycl.cpp
src/coll/algorithms/recv/sycl/: recv_pcie.cpp  recv_pcie.hpp  recv_sycl.cpp  recv_sycl.hpp
src/coll/algorithms/reduce_scatter/sycl/: reduce_scatter_large_sycl.cpp  reduce_scatter_pcie.cpp  reduce_scatter_pcie.hpp  reduce_scatter_small_sycl.cpp  reduce_scatter_sycl.cpp  reduce_scatter_sycl.hpp
src/coll/algorithms/send/sycl/: send_pcie.cpp  send_pcie.hpp  send_sycl.cpp  send_sycl.hpp
src/coll/algorithms/utils/: sycl_coll_base.cpp  sycl_coll_base.hpp  sycl_selection.cpp
src/coll/algorithms/utils/transmit/: ring_transmit.hpp
src/coll/group/: group.cpp
src/coll/selection/: selection.cpp
src/comm/: comm.cpp  comm.hpp
src/common/api_wrapper/: ze_api_wrapper.hpp
src/common/env/: env.cpp  env.hpp  vars_experimental.hpp
src/common/global/: global.cpp
src/common/global/ze/: ze_data.cpp  ze_data.hpp
src/common/log/: log.cpp  log.hpp
src/sched/entry/ze/cache/: ze_cache.cpp  ze_cache.hpp
src/topology/: topo_manager.cpp
